# McpJames-

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: jsonrpc.hpp  mcp.hpp
include/transport/: http_transport.hpp  sse_transport.hpp  transport.hpp
include/type/: mcp_type.hpp
mcpjamesplusplus/: jsonrpc.hpp  mcp.hpp
mcpjamesplusplus/transport/: http_transport.hpp  sse_transport.hpp  transport.hpp
mcpjamesplusplus/type/: mcp_type.hpp
src/: Mcp.cpp  main.cpp  mcp.cpp  mcp.hpp
src/transport/: SSE.cpp  SSE.hpp
src/types/: mcp_types.h
